# venture-analyst

./: .gitignore  CLAUDE.md  README.md
backend/: .gitignore  lint.py  main.py  pyproject.toml  requirements.txt
backend/agents/: base.py  competitor_agent.py  market_agent.py  monetisation_agent.py  risk_agent.py  synthesis_agent.py
backend/api/: routes.py
backend/core/: job_store.py  orchestrator.py  streaming.py
backend/schemas/: events.py  responses.py
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/result/[jobId]/: page.tsx
frontend/app/validate/: page.tsx
frontend/components/: AgentCard.tsx  AgentStatusPanel.tsx  Markdown.tsx  SynthesisPanel.tsx
frontend/components/analysis/: ActivityFeed.tsx  AgentOutputCard.tsx  AgentProgressList.tsx  SynthesisOutput.tsx
frontend/components/report/: ValidationScore.tsx
frontend/hooks/: useAgentStream.ts
frontend/store/: agentStore.ts
workspace/backend/: .env.example  .gitignore  main.py
workspace/backend/agents/: base.py  competitor_agent.py  market_agent.py  monetisation_agent.py  risk_agent.py  synthesis_agent.py
workspace/backend/api/: routes.py
workspace/backend/core/: job_store.py  orchestrator.py  streaming.py
workspace/backend/schemas/: requests.py
workspace/frontend/: .gitignore  package.json
workspace/frontend/app/: globals.css  layout.tsx  page.tsx
workspace/frontend/components/: AgentCard.tsx  LogPanel.tsx  ScoreCard.tsx
workspace/frontend/lib/: api.ts
workspace/frontend/store/: agentStore.ts
(+2 files in other folders)
